# compute-shading-learning

./: .gitignore  generate_data.py  readme.md  requirements.txt
CsharpSolution/: BruhMoment.cs  CsharpSolution.csproj  CsharpSolution.sln  MortgageOutputRecord.cs  MortgagePaymentCalculator.cs  MortgageSourceRecord.cs  Program.cs  Worker.cs
data_generation/src/: generate_data.py
data_generation/tests/: test_generate_data.py
python_solution/: Analysis-Solution.ipynb  Analysis.ipynb  Dockerfile  Solution.ipynb  docker-compose.yml  requirements.txt  start.sh  test.ipynb
vulkanSolution/: CMakeLists.txt  Makefile  readme.md
vulkanSolution/shaders/: comp  mortgage.comp
vulkanSolution/src/: main.cpp  parquet_loader.cpp  parquet_loader.hpp  program.cpp  program.hpp  record.cpp  record.hpp  vkDeleters.hpp
